[gd_scene load_steps=15 format=3 uid="uid://bfgfxx1slhm4o"]

[ext_resource type="Script" path="res://code/Levels/level.gd" id="1_n5lt2"]
[ext_resource type="PackedScene" uid="uid://cvtnb7pmkssui" path="res://code/characters/player/player.tscn" id="3_6jdtm"]
[ext_resource type="Script" path="res://code/Levels/EnemyLayer.gd" id="3_ebdkc"]
[ext_resource type="Script" path="res://code/Levels/BulletLayer.gd" id="4_wop4b"]
[ext_resource type="Texture2D" uid="uid://oe1tua2ag8ur" path="res://assets/UI/metalPanel.png" id="5_430k0"]
[ext_resource type="FontFile" uid="uid://dhv685ihmqhuj" path="res://assets/Font/Kenney Future.ttf" id="6_1h03x"]
[ext_resource type="FontFile" uid="uid://bn7mysvman1d7" path="res://assets/Font/Kenney Future Narrow.ttf" id="7_blgov"]
[ext_resource type="Script" path="res://code/Levels/TimeCounter.gd" id="7_s870p"]
[ext_resource type="Texture2D" uid="uid://bf4f4qnns16kw" path="res://assets/UI/glassPanel_projection.png" id="9_ypw4a"]
[ext_resource type="Theme" uid="uid://b8un5nek13bhs" path="res://new_theme.tres" id="10_plfcf"]
[ext_resource type="Script" path="res://code/Levels/Pause.gd" id="11_si7v2"]
[ext_resource type="Texture2D" uid="uid://c7t5khe1gp5kx" path="res://assets/UI/glassPanel.png" id="11_yiuvo"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qsar6"]
load_path = "res://.godot/imported/square_512.png-4749acfb4fbd5aefb00f0ec700079802.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qrn6j"]
texture = ExtResource("5_430k0")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[node name="level" type="Node2D"]
script = ExtResource("1_n5lt2")
metadata/_edit_vertical_guides_ = []

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 1)
texture = SubResource("CompressedTexture2D_qsar6")

[node name="EnemyLayer" type="Node2D" parent="."]
script = ExtResource("3_ebdkc")

[node name="Player" parent="." instance=ExtResource("3_6jdtm")]

[node name="BulletLayer" type="Node2D" parent="."]
script = ExtResource("4_wop4b")

[node name="BEAMLayer" type="Node2D" parent="."]

[node name="ParticleLayer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Border" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Border"]
visible = false
build_mode = 1
polygon = PackedVector2Array(256, -200, 256, 256, -256, 256, -256, -200)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = -200.0
grow_horizontal = 2

[node name="ColorRect" type="ColorRect" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qrn6j")

[node name="Time" type="Control" parent="UI/Panel"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = -43.0
offset_top = 4.0
offset_right = -3.0
offset_bottom = 44.0
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="UI/Panel/Time"]
unique_name_in_owner = true
one_shot = true

[node name="TimeText" type="RichTextLabel" parent="UI/Panel/Time"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
offset_left = -216.0
offset_top = 11.0
offset_right = -36.0
offset_bottom = 43.0
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[right]Next Wave:[/right]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="TimeCounter" type="RichTextLabel" parent="UI/Panel/Time"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 256.0
offset_top = 10.0
offset_right = 296.0
offset_bottom = 46.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 24
text = "00"
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("7_s870p")

[node name="Ammo" type="Control" parent="UI/Panel"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 196.0
offset_top = 3.0
offset_right = 236.0
offset_bottom = 43.0
metadata/_edit_lock_ = true

[node name="AmmoText" type="RichTextLabel" parent="UI/Panel/Ammo"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
offset_left = -216.0
offset_top = 10.0
offset_right = -48.0
offset_bottom = 42.0
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_blgov")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[right]Ammo:   [/right]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="AmooCounter" type="RichTextLabel" parent="UI/Panel/Ammo"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 256.0
offset_top = 10.0
offset_right = 296.0
offset_bottom = 46.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_blgov")
theme_override_font_sizes/normal_font_size = 12
text = "3"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Life" type="Control" parent="UI/Panel"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 196.0
offset_top = 21.0
offset_right = 236.0
offset_bottom = 61.0
metadata/_edit_lock_ = true

[node name="LifeText" type="RichTextLabel" parent="UI/Panel/Life"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
offset_left = -216.0
offset_top = 10.0
offset_right = -48.0
offset_bottom = 42.0
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_blgov")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[right]Lives:   [/right]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="LifeCounter" type="RichTextLabel" parent="UI/Panel/Life"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 256.0
offset_top = 10.0
offset_right = 296.0
offset_bottom = 46.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_blgov")
theme_override_font_sizes/normal_font_size = 12
text = "3"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Enemies" type="Control" parent="UI/Panel"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 95.0
offset_top = 3.0
offset_right = 135.0
offset_bottom = 43.0
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="EnemyText" type="RichTextLabel" parent="UI/Panel/Enemies"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
offset_left = -216.0
offset_top = 10.0
offset_right = -48.0
offset_bottom = 42.0
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_blgov")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[right]Enemies:   [/right]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="EnemyCounter" type="RichTextLabel" parent="UI/Panel/Enemies"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 256.0
offset_top = 10.0
offset_right = 296.0
offset_bottom = 46.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_blgov")
theme_override_font_sizes/normal_font_size = 12
text = "0"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Score" type="Control" parent="UI/Panel"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 95.0
offset_top = 21.0
offset_right = 135.0
offset_bottom = 61.0
metadata/_edit_group_ = true

[node name="ScoreText" type="RichTextLabel" parent="UI/Panel/Score"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
offset_left = -216.0
offset_top = 10.0
offset_right = -48.0
offset_bottom = 42.0
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_blgov")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[right]Score:   [/right]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ScoreCounter" type="RichTextLabel" parent="UI/Panel/Score"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 256.0
offset_top = 10.0
offset_right = 296.0
offset_bottom = 46.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_blgov")
theme_override_font_sizes/normal_font_size = 12
text = "0"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="EndScore" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_right = -600.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="EndScore"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -180.0
offset_right = 240.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_ypw4a")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="EndScore/NinePatchRect"]
layout_mode = 0
offset_left = 19.5
offset_top = 35.5
offset_right = 439.5
offset_bottom = 361.5
metadata/_edit_lock_ = true

[node name="Text1" type="RichTextLabel" parent="EndScore/NinePatchRect/VBoxContainer"]
clip_contents = false
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "Enemies shot"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="EnemyScore" type="RichTextLabel" parent="EndScore/NinePatchRect/VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(420, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[right]10000[/right]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Text2" type="RichTextLabel" parent="EndScore/NinePatchRect/VBoxContainer"]
clip_contents = false
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "Bullets shot"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="BulletScore" type="RichTextLabel" parent="EndScore/NinePatchRect/VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(420, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[right]420[/right]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Text3" type="RichTextLabel" parent="EndScore/NinePatchRect/VBoxContainer"]
clip_contents = false
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "shots fired"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="AmmoMultiplier" type="RichTextLabel" parent="EndScore/NinePatchRect/VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(420, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[right]200%[/right]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Text4" type="RichTextLabel" parent="EndScore/NinePatchRect/VBoxContainer"]
clip_contents = false
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "hits taken"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="LifeMultiplier" type="RichTextLabel" parent="EndScore/NinePatchRect/VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(420, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[right]160%[/right]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Text5" type="RichTextLabel" parent="EndScore/NinePatchRect/VBoxContainer"]
clip_contents = false
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "Final SCORE"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="FinalScore" type="RichTextLabel" parent="EndScore/NinePatchRect/VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(420, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[right]27000%[/right]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Return" type="Button" parent="EndScore"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = 199.0
offset_right = 114.5
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_plfcf")
theme_override_fonts/font = ExtResource("6_1h03x")
text = "return to title Screen"

[node name="Pause" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -268.0
offset_top = -198.0
offset_right = 253.0
offset_bottom = 40.0
script = ExtResource("11_si7v2")

[node name="NinePatchRect" type="NinePatchRect" parent="Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -56.0
offset_right = 4.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_yiuvo")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Text6" type="RichTextLabel" parent="Pause/NinePatchRect"]
clip_contents = false
layout_direction = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -15.5
offset_right = 210.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("6_1h03x")
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "[center]PAUSED[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Unpause" type="Button" parent="Pause/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.5
offset_top = -84.0
offset_right = 132.5
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_plfcf")
theme_override_fonts/font = ExtResource("6_1h03x")
text = "Return to game"

[node name="PauseReturn" type="Button" parent="Pause/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.5
offset_top = -50.0
offset_right = 132.5
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_plfcf")
theme_override_fonts/font = ExtResource("6_1h03x")
text = "return to title Screen"
